--- a/solo-util-core/pom.xml
+++ b/solo-util-core/pom.xml
@@ -9,13 +9,12 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>solo-util-core</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://solo-util.sexycode.cn</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
