--- a/solo-office/solo-office-freemarker/pom.xml
+++ b/solo-office/solo-office-freemarker/pom.xml
@@ -23,6 +23,11 @@
             <version>2.3.28</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
