--- a/solo-office/solo-office-core/pom.xml
+++ b/solo-office/solo-office-core/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.sexycode</groupId>
+            <artifactId>solo-util-core</artifactId>
+        </dependency>
 
 
     </dependencies>
