--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>1.2</version>
     </parent>
     <artifactId>solo-util</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>solo-util</name>
     <url>http://solo-util.sexycode.cn</url>
