--- a/solo-util-core/pom.xml
+++ b/solo-util-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.sexycode</groupId>
         <artifactId>solo-util</artifactId>
-        <version>1.2</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
     <artifactId>solo-util-core</artifactId>
     <name>solo-util-core</name>
