代理对象工具

--- a/solo-core/pom.xml
+++ b/solo-core/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>asm-all</artifactId>
             <version>6.0_BETA</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
