--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>1.2</version>
     </parent>
     <artifactId>solo</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <packaging>pom</packaging>
     <name>solo</name>
     <url>http://solo.sexycode.cn</url>
