--- a/solo-core/pom.xml
+++ b/solo-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.sexycode</groupId>
         <artifactId>solo</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
     </parent>
     <artifactId>solo-core</artifactId>
     <name>solo-core</name>
